license-update: in MIT we trust

--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     ],
     "homepage": "https://github.com/italomaia/hygen-axum-podman-template",
     "main": "index.js",
-    "author": "Italo Maia"
+    "author": "Italo Maia",
+    "license": "MIT"
 }
